--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app"></div>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.jsx"></script>
   </body>
 
 </html>
